--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <h1 class="section-title">Our Services</h1>
       <div class="service-container">
         <div class="service-box">
-          <img src="./images/" alt="Braces Installation" />
+          <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="310" />
           <b>Braces Installation</b>
           <p>Get the perfect fit for your braces with professional installation.</p>
         </div>
@@ -161,7 +161,7 @@
           <p>Fast and efficient repair services for your braces.</p>
         </div>
         <div class="service-box">
-          <img src="images/Braces-adjustment.png" alt="Braces Adjustment" />
+          <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="310"/>
           <b>Braces Purchase</b>
           <p>Regular adjustments for a comfortable and effective fit.</p>
         </div>
