--- a/payment.html
+++ b/payment.html
@@ -161,6 +161,37 @@
     .go-top.show {
       display: block;
     }
+
+    .main-nav {
+  background-color: #2C3E50;
+  text-align: center;
+  padding: 15px 0;
+}
+
+.main-nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.main-nav ul li {
+  display: inline-block;
+  margin: 0 20px;
+}
+
+.main-nav a {
+  color: #fff;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  transition: background-color 0.3s ease;
+}
+
+.main-nav a.active, .main-nav a:hover {
+  background-color: #E67E22;
+  border-radius: 4px;
+}
   </style>
 </head>
 <body>
@@ -169,6 +200,14 @@
       <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Shop Logo">
     </div>
     <h1 class="site-title">Order From The Best</h1>
+
+    <div class="main-nav">
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="active">Home</a>
+        </nav>
+      </div>
+    </div>
   </header>
 
   <main>
