--- a/repair.html
+++ b/repair.html
@@ -83,9 +83,9 @@
       </form>
 
       <p id="note" style="display: none;">
-        Note: Home service comes with an additional 50 cedis charge on top of the repair cost.
+        Note: Home service comes with an additional charge on top of the repair cost.
       </p>
-      <p id="confirmation" style="display: none; color: green;">Thank you! Your repair booking has been submitted.</p>
+      <strong><p id="confirmation" style="display: none; color: green;">Thank you! Your repair booking has been submitted.</p></strong>
     </section>
   </main>
 
