--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="item-kv-txt col-md-6 col-xl-4">
                   <h2>Purchase And Book Appointment With Adorina</h2>
                   <h3>Get All Kinds And Colours Of Braces From Adorina.</h3>
-                  <a class="btn">Make an Appointment</a>
+                  <a class="btn">Purchase From The Best</a>
                 </div>
               </div>
             </div>
