--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BracesByAdorina</title>
     <link rel="stylesheet" href="./css/style.css" />
     <!-- FontAwesome for icons -->
@@ -15,7 +14,7 @@
         <div class="main-info">
           <h1 class="logo">
             <a href="#">
-              <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" height="" width="" alt="Adorina Braces" />
+              <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" height="100" width="100" alt="Adorina Braces" />
             </a>
           </h1>
           <h1 class="site-title">BracesByAdorina</h1>
