--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main-info">
           <h1 class="logo">
             <a href="#">
-              <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" height="100" width="100" alt="Adorina Braces" />
+              <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" height="" width="" alt="Adorina Braces" />
             </a>
           </h1>
           <h1 class="site-title">BracesByAdorina</h1>
@@ -38,7 +38,7 @@
             <div class="container">
               <div class="row">
                 <div class="item-kv-txt col-md-6 col-xl-4">
-                  <h2>Purchase And Book Appointment With Adorina</h2>
+                  <h2>Purchase Braces From Adorina</h2>
                   <h3>Get All Kinds And Colours Of Braces From Adorina.</h3>
                   <a class="btn">Purchase From The Best</a>
                 </div>
