--- a/index.html
+++ b/index.html
@@ -9,17 +9,23 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   </head>
   <body>
+     <!-- Logo Section -->
     <header class="main-header">
       <div class="container">
         <div class="main-info">
           <h1 class="logo">
-            <a href="#">
-              <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" height="" width="" alt="Adorina Braces" />
+              <a href="#">
+                <img 
+                  src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" 
+                  alt="Adorina Braces Logo" 
+                  class="responsive-logo"/>
             </a>
           </h1>
           <h1 class="site-title">BracesByAdorina</h1>
         </div>
       </div>
+
+     
 
       <div class="main-nav">
         <div class="container">
@@ -167,15 +173,20 @@
       </div>
     </div>
 
+
     <!-- Video Section -->
-    <section class="video-section">
-      <div class="container">
-        <h2 class="section-title">Watch Our Videos</h2>
-        <div class="video-container">
-          <div class="video-card">
-            <iframe width="560" height="315" src="./images/video1.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          </div>
-    </section>
+<section class="video-section">
+  <div class="container">
+    <h2 class="section-title">Watch Our Videos</h2>
+    <div class="video-container">
+      <video class="responsive-video" autoplay loop muted>
+        <source src="./images/video1.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+      </video>
+    </div>
+  </div>
+</section>
+
 
     <footer class="main-footer">
   <div class="container">
