--- a/index.html
+++ b/index.html
@@ -155,17 +155,17 @@
       <h1 class="section-title">Our Services</h1>
       <div class="service-container">
         <div class="service-box">
-          <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="310" />
+          <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="210" />
           <b>Braces Installation</b>
           <p>Get the perfect fit for your braces with professional installation.</p>
         </div>
         <div class="service-box">
-          <img src="./images/service-img-5.jpg" alt="Braces Repair" />
+          <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="210" />
           <b>Braces Repair</b>
           <p>Fast and efficient repair services for your braces.</p>
         </div>
         <div class="service-box">
-          <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="310"/>
+          <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="210"/>
           <b>Braces Purchase</b>
           <p>Regular adjustments for a comfortable and effective fit.</p>
         </div>
