--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BracesByAdorina</title>
     <link rel="stylesheet" href="./css/style.css" />
     <!-- FontAwesome for icons -->
@@ -155,17 +156,17 @@
       <h1 class="section-title">Our Services</h1>
       <div class="service-container">
         <div class="service-box">
-          <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="210" />
+          <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="250" />
           <b>Braces Installation</b>
           <p>Get the perfect fit for your braces with professional installation.</p>
         </div>
         <div class="service-box">
-          <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="210" />
+          <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="250" />
           <b>Braces Repair</b>
           <p>Fast and efficient repair services for your braces.</p>
         </div>
         <div class="service-box">
-          <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="210"/>
+          <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="250"/>
           <b>Braces Purchase</b>
           <p>Regular adjustments for a comfortable and effective fit.</p>
         </div>
