--- a/index.html
+++ b/index.html
@@ -157,18 +157,15 @@
       <div class="service-container">
         <div class="service-box">
           <img src="./images/OIP (1).jpeg" alt="Braces Installation" height="300" width="250" />
-          <b>Braces Installation</b>
-          <p>Get the perfect fit for your braces with professional installation.</p>
+            <b><p>Get the perfect fit for your braces with professional installation.</p></b>
         </div>
         <div class="service-box">
           <img src="./images/service-img-5.jpg" alt="Braces Repair" height="300" width="250" />
-          <b>Braces Repair</b>
-          <p>Fast and efficient repair services for your braces.</p>
+          <b><p>Fast and efficient repair services for your braces.</p></b>
         </div>
         <div class="service-box">
           <img src="images/R.jpeg" alt="Braces Adjustment" height="300" width="250"/>
-          <b>Braces Purchase</b>
-          <p>Regular adjustments for a comfortable and effective fit.</p>
+          <b><p>Regular adjustments for a comfortable and effective fit.</p></b>
         </div>
       </div>
     </div>
