--- a/payment.html
+++ b/payment.html
@@ -161,21 +161,60 @@
     .go-top.show {
       display: block;
     }
+
+    .main-nav {
+      background-color: #2C3E50;
+      text-align: right;
+      padding: 15px 0;
+    }
+
+    .main-nav ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .main-nav ul li {
+      display: inline-block;
+      margin: 0 20px;
+    }
+
+    .main-nav a {
+      color: #fff;
+      padding: 10px 20px;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: 500;
+      transition: background-color 0.3s ease;
+    }
+
+    .main-nav a.active, .main-nav a:hover {
+      background-color: #E67E22;
+      border-radius: 4px;
+    }
   </style>
 </head>
 <body>
   <header class="main-header">
     <div class="logo">
-      <img src="./images/logo.jpg" alt="Shop Logo">
+      <img src="./images/WhatsApp%20Image%202024-12-19%20at%2008.21.08_7aa0a1c1.jpg" alt="Shop Logo">
     </div>
     <h1 class="site-title">Order From The Best</h1>
+
+    <div class="main-nav">
+      <div class="container">
+        <nav>
+          <a href="./index.html" class="active">Home</a>
+        </nav>
+      </div>
+    </div>
   </header>
 
   <main>
     <h2>Order For Braces</h2>
     <p class="info">
       Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance payments.
-      <strong>Please reference your name when paying via Mobile Money; details will be submitted via Email.</strong>
+      <strong>Please reference your name when paying via Mobile Money also details will be submitted via Email</strong>
     </p>
     <form id="paymentForm">
       <label for="location">Select Delivery Location:</label>
@@ -187,21 +226,12 @@
         <option value="Outside Accra">Outside Accra</option>
       </select>
 
-      <label for="paymentMethod">Select Payment Method:</label>
-      <select id="paymentMethod" name="paymentMethod" required>
-        <option value="" disabled selected>Choose Payment Method</option>
-        <option value="Cash on Delivery">Cash on Delivery</option>
-        <option value="Mobile Money">Mobile Money</option>
-      </select>
+      <div id="phoneNumberDiv">
+        <label for="phoneNumber">Phone Number: 0245095233</label>
+      </div>
 
       <label for="reference">Add Reference:</label>
-      <input type="text" id="reference" name="reference" placeholder="Enter your reference">
-
-      <div id="paymentDetails" style="display: none;"></div>
-
-      <div id="mobileNumberInfo" style="display: none;">
-        <p><strong>Mobile Money Number:</strong> 0245095233</p>
-      </div>
+      <input type="text" id="reference" name="reference" placeholder="Enter payment reference" required>
 
       <button type="submit">Confirm Payment</button>
     </form>
@@ -210,49 +240,34 @@
 
   <footer>
     <ul class="sns">
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Instagram</a></li>
+      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
     </ul>
     <p>Contact Us: calebowusu333@gmail.com | +233 244266271</p>
   </footer>
 
-  <button id="goTop" class="go-top">&uarr;</button>
+  <button id="goTop" class="go-top">↑</button>
 
   <script>
     const paymentForm = document.getElementById('paymentForm');
-    const paymentMethodSelect = document.getElementById('paymentMethod');
-    const paymentDetails = document.getElementById('paymentDetails');
-    const mobileNumberInfo = document.getElementById('mobileNumberInfo');
+    const locationSelect = document.getElementById('location');
     const confirmationMessage = document.getElementById('confirmationMessage');
-
-    paymentMethodSelect.addEventListener('change', () => {
-      paymentDetails.innerHTML = '';
-      paymentDetails.style.display = 'none';
-      mobileNumberInfo.style.display = 'none';
-
-      if (paymentMethodSelect.value === 'Mobile Money') {
-        mobileNumberInfo.style.display = 'block';
-      }
-    });
 
     paymentForm.addEventListener('submit', (event) => {
       event.preventDefault();
 
       // Gather form data
-      const location = document.getElementById('location').value;
-      const paymentMethod = paymentMethodSelect.value;
-      const reference = document.getElementById('reference').value || 'N/A';
+      const location = locationSelect.value;
+      const reference = document.getElementById('reference').value;
 
       // Construct email details
-      const adminEmail = "calebowusu333@gmail.com";
+      const adminEmail = "calebowusu333@gmail.com"; // Replace with your admin email
       const subject = encodeURIComponent("Payment Confirmation");
       const body = encodeURIComponent(
         `Payment Details:\n\n` +
         `Delivery Location: ${location}\n` +
-        `Payment Method: ${paymentMethod}\n` +
-        `Reference: ${reference}\n` +
-        `Mobile Money Number: 0245095233\n\n` +
+        `Reference: ${reference}\n\n` +
         `Please review the details.`
       );
 
