--- a/payment.html
+++ b/payment.html
@@ -214,7 +214,7 @@
     <h2>Order For Braces</h2>
     <p class="info">
       Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance payments.
-      <strong>Please reference your name when paying via Mobile Money also details will be submitted via Email</strong>
+      <strong>Please reference your name when paying via Mobile Money also call for confirmation</strong>
     </p>
     <form id="paymentForm">
       <label for="location">Select Delivery Location:</label>
