--- a/payment.html
+++ b/payment.html
@@ -248,45 +248,44 @@
   </footer>
 
   <button id="goTop" class="go-top">↑</button>
+  
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  // Initialize EmailJS
+  (function () {
+    emailjs.init("service_9hch5mx"); // Replace with your EmailJS User ID
+  })();
 
-  <script>
-    const paymentForm = document.getElementById('paymentForm');
-    const locationSelect = document.getElementById('location');
-    const confirmationMessage = document.getElementById('confirmationMessage');
+  const paymentForm = document.getElementById('paymentForm');
+  const confirmationMessage = document.getElementById('confirmationMessage');
 
-    paymentForm.addEventListener('submit', (event) => {
-      event.preventDefault();
+  paymentForm.addEventListener('submit', (event) => {
+    event.preventDefault();
 
-      // Gather form data
-      const location = locationSelect.value;
-      const reference = document.getElementById('reference').value;
+    // Gather form data
+    const formData = {
+      location: document.getElementById('location').value,
+      phoneNumber: "0245095233", // Static phone number
+      reference: document.getElementById('reference').value,
+    };
 
-      // Construct email details
-      const adminEmail = "calebowusu333@gmail.com"; // Replace with your admin email
-      const subject = encodeURIComponent("Payment Confirmation");
-      const body = encodeURIComponent(
-        `Payment Details:\n\n` +
-        `Delivery Location: ${location}\n` +
-        `Reference: ${reference}\n\n` +
-        `Please review the details.`
+    // Send the email using EmailJS
+    emailjs
+      .send("service_9hch5mx", "template_e8igl1s", formData)
+      .then(
+        (response) => {
+          confirmationMessage.style.display = 'block';
+          confirmationMessage.textContent = "Thank you! Your order has been submitted successfully.";
+          paymentForm.reset();
+        },
+        (error) => {
+          confirmationMessage.style.display = 'block';
+          confirmationMessage.textContent = "Error submitting your order. Please try again later.";
+        }
       );
+  });
+</script>
 
-      // Redirect to email client
-      window.location.href = `mailto:${adminEmail}?subject=${subject}&body=${body}`;
-    });
 
-    const goTopButton = document.getElementById('goTop');
-    window.addEventListener('scroll', () => {
-      if (window.scrollY > 300) {
-        goTopButton.classList.add('show');
-      } else {
-        goTopButton.classList.remove('show');
-      }
-    });
-
-    goTopButton.addEventListener('click', () => {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
-    });
-  </script>
 </body>
 </html>
