--- a/payment.html
+++ b/payment.html
@@ -270,8 +270,8 @@
     };
 
     // Send the email using EmailJS
-    emailjs
-      .send("service_9hch5mx", "template_e8igl1s", formData)
+   emailjs
+     .send("service_9hch5mx","template_8o08ytp");
       .then(
         (response) => {
           confirmationMessage.style.display = 'block';
