--- a/payment.html
+++ b/payment.html
@@ -217,6 +217,12 @@
       <strong>Please reference your name when paying via Mobile Money also call for confirmation</strong>
     </p>
     <form id="paymentForm">
+      <label for="name">Your Name:</label>
+      <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+
+      <label for="phone">Your Phone Number:</label>
+      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+
       <label for="location">Select Delivery Location:</label>
       <select id="location" name="location" required>
         <option value="" disabled selected>Choose Location</option>
@@ -225,10 +231,6 @@
         <option value="Kasoa">Kasoa</option>
         <option value="Outside Accra">Outside Accra</option>
       </select>
-
-      <div id="phoneNumberDiv">
-        <label for="phoneNumber">Phone Number: 0245095233</label>
-      </div>
 
       <label for="reference">Add Reference:</label>
       <input type="text" id="reference" name="reference" placeholder="Enter payment reference" required>
