--- a/payment.html
+++ b/payment.html
@@ -214,7 +214,7 @@
     <h2>Order For Braces</h2>
     <p class="info">
       Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance payments.
-      <strong>Please reference your name when paying via Mobile Money also call for confirmation</strong>
+      <strong><br>Please Payment is accepted through MOMO and remember to reference your name during payment(Reference should match the one provided here, for security reasons)<br> <br>MOBILE MONEY NUMBER: 0244266271<br></strong>
     </p>
     <form id="paymentForm">
       <label for="name">Your Name:</label>
@@ -246,7 +246,7 @@
       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
       <li><a href="#"><i class="fa fa-instagram"></i></a></li>
     </ul>
-    <p>Contact Us: calebowusu333@gmail.com | +233 244266271</p>
+    <p>Contact Us:BracesbyAdorina@gmail.com | +233 244266271</p>
   </footer>
 
   <button id="goTop" class="go-top">↑</button>
