--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <h3>Contact Us</h3>
             <p><i class="fas fa-phone-alt"></i> 0244266271 </p>
             <p><i class="fas fa-map-marker-alt"></i><a href="www.google.com/STADIUM+JUNCTION/@5.7071606,-0.2989597,17z/data=!3m1!4b1!4m6!3m5!1s0xfdf9f7b0784bc21:0xa721f45e441a064e!8m2!3d5.7071606!4d-0.2989597!16s%2Fg%2F11kp6k4pfy?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D">Amasaman-Stadium road/ Agartha Junction Accra</a></p>
-            <p><i class="fas fa-envelope"></i> <a href="calebowusu333@gmail.com">calebowusu333@gmail.com</a></p>
+            <p><i class="fas fa-envelope"></i> <a href="BracesbyAdorina@gmail.com">BracesbyAdorina@gmail.com</a></p>
     </div>
       </div>
    </footer>
