--- a/payment.html
+++ b/payment.html
@@ -213,8 +213,9 @@
   <main>
     <h2>Order For Braces</h2>
     <p class="info">
-      Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance payments.
-      <strong><br>Please Payment is accepted through MOMO and remember to reference your name during payment(Reference should match the one provided here, for security reasons)<br> <br>MOBILE MONEY NUMBER: 0244266271<br></strong>
+      Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance or half payments.
+      <strong><br>Please Payment is accepted through MOMO and remember to reference your name during payment(Reference should match the one provided here, for security reasons)<br> <br>MOBILE MONEY NUMBER: 0578837373<br>
+      <br>Amount: GH₵‎56<br></strong>
     </p>
     <form id="paymentForm">
       <label for="name">Your Name:</label>
