--- a/payment.html
+++ b/payment.html
@@ -86,6 +86,11 @@
       border-radius: 5px;
     }
 
+    form input[readonly] {
+      background-color: #f0f0f0;
+      cursor: not-allowed;
+    }
+
     form button {
       background-color: #E67E22;
       color: #fff;
@@ -214,15 +219,21 @@
     <h2>Order For Braces</h2>
     <p class="info">
       Payment is accepted on delivery in Accra, Tema, and Kasoa. For pickups, visit Dansoman-Control. Customers outside Accra are required to make advance or half payments.
-      <strong><br>Please Payment is accepted through MOMO and remember to reference your name during payment(Reference should match the one provided here, for security reasons)<br> <br>MOBILE MONEY NUMBER: 0578837373<br>
+      <strong><br>Please Payment is accepted through MOMO and remember to reference your name during payment (Reference should match the one provided here, for security reasons).<br>
       <br>Amount: GH₵‎56<br></strong>
     </p>
-    <form id="paymentForm">
-      <label for="name">Your Name:</label>
-      <input type="text" id="name" name="name" placeholder="Enter your full name" required>
+      
+      <label for="momoNumber">Momo Number: 0578837373</label>
+      <input type="tel" id="momoNumber" name="momoNumber" value="0578837373" readonly>
 
-      <label for="phone">Your Phone Number:</label>
-      <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required>
+      <label for="phone">Name: Adorina</label>
+      <input type="tel" id="number" name="phone" value="name" readonly>
+
+      <label for="amount">Enter Amount Sent: </label>
+      <input type="number" id="amount" name="amount" placeholder="Enter amount (e.g., 56)" required>
+
+      <label for="reference">Add Reference:</label>
+      <input type="text" id="reference" name="reference" placeholder="Enter payment reference" required>
 
       <label for="location">Select Delivery Location:</label>
       <select id="location" name="location" required>
@@ -232,9 +243,6 @@
         <option value="Kasoa">Kasoa</option>
         <option value="Outside Accra">Outside Accra</option>
       </select>
-
-      <label for="reference">Add Reference:</label>
-      <input type="text" id="reference" name="reference" placeholder="Enter payment reference" required>
 
       <button id="button" type="submit">Confirm Payment</button>
     </form>
@@ -247,46 +255,80 @@
       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
       <li><a href="#"><i class="fa fa-instagram"></i></a></li>
     </ul>
-    <p>Contact Us:BracesbyAdorina@gmail.com | +233 244266271</p>
+    <p>Contact Us: BracesbyAdorina@gmail.com | +233 244266271</p>
   </footer>
 
   <button id="goTop" class="go-top">↑</button>
 
+
   <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    // Initialize EmailJS
-    (function () {
-      emailjs.init("2dYl2LeOZ3NN4aQuV"); // Replace with your actual EmailJS User ID
-    })();
+<script>
+  // Initialize EmailJS
+  (function () {
+    emailjs.init("2dYl2LeOZ3NN4aQuV"); //  EmailJS User ID
+  })();
 
-    const paymentForm = document.getElementById('paymentForm');
-    const confirmationMessage = document.getElementById('confirmationMessage');
-    const btn = document.getElementById('button');
+  const paymentForm = document.getElementById('paymentForm');
+  const confirmationMessage = document.getElementById('confirmationMessage');
+  const btn = document.getElementById('button');
 
-    paymentForm.addEventListener('submit', function(event) {
-      event.preventDefault();
+  paymentForm.addEventListener('submit', function (event) {
+    event.preventDefault();
 
-      btn.value = 'Sending...';
+    btn.value = 'Sending...';
 
-      const serviceID = 'default_service'; // Replace with your actual service ID
-      const templateID = 'template_8o08ytp';
+    // Validate inputs
+    const momoNumber = "0578837373" //static
+    const amount = document.getElementById("amount").value;
+    const reference = document.getElementById("reference").value;
+    const location = document.getElementById("location").value;
 
-      emailjs.sendForm(serviceID, templateID, this)
-        .then(() => {
-          btn.value = 'Confirm Payment';
-          confirmationMessage.style.display = 'block';
-          confirmationMessage.textContent = "Thank you! Your order has been submitted successfully.";
-          paymentForm.reset();
-          setTimeout(() => {
-            window.location.href = "./index.html"; // Redirect to home page
-          }, 4000); // 4-second delay before redirecting
-        }, (err) => {
-          btn.value = 'Confirm Payment';
-          confirmationMessage.style.display = 'block';
-          confirmationMessage.textContent = "Error submitting your order. Please try again later.";
-        });
-    });
-  </script>
+    if (!amount || !reference || !location) {
+      alert("Please fill in all required fields.");
+      btn.value = 'Confirm Payment';
+      return;
+    }
+
+    if (amount <= 0) {
+      alert("Amount must be greater than 0.");
+      btn.value = 'Confirm Payment';
+      return;
+    }
+
+    // Prepare the form data for sending
+    const formData = {
+      amount: amount,
+      reference: reference,
+      location: location,
+    };
+
+    // Send the data using EmailJS
+    const serviceID = 'default_service'; //  service ID
+    const templateID = 'template_8o08ytp';
+
+    emailjs.send(serviceID, templateID, formData)
+      .then(() => {
+        btn.value = 'Confirm Payment';
+        confirmationMessage.style.display = 'block';
+        confirmationMessage.textContent = `Thank you, Your payment of GH₵‎${amount} has been processed. Delivery to ${location} is confirmed. Reference: ${reference}.`;
+        paymentForm.reset();
+
+        // Reset static fields after clearing the form
+        document.getElementById("name").value = name;
+        document.getElementById("phone").value = phone;
+        document.getElementById("momoNumber").value = momoNumber;
+
+        setTimeout(() => {
+          window.location.href = "./index.html"; // Redirect to home page
+        }, 1000); // 1-second delay before redirecting
+      })
+      .catch((err) => {
+        btn.value = 'Confirm Payment';
+        confirmationMessage.style.display = 'block';
+        confirmationMessage.textContent = "Error submitting your order. Please try again later.";
+      });
+  });
+</script>
 
 </body>
 </html>
