--- a/payment.html
+++ b/payment.html
@@ -175,55 +175,82 @@
     <p>Contact Us: BracesbyAdorina@gmail.com | +233 244266271</p>
   </footer>
 
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    // Initialize EmailJS
-    (function () {
-      emailjs.init("2dYl2LeOZ3NN4aQuV"); // EmailJS User ID
-    })();
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  // Initialize EmailJS
+  (function () {
+    emailjs.init("2dYl2LeOZ3NN4aQuV"); // Replace with your actual EmailJS User ID
+  })();
 
-    const paymentForm = document.getElementById('paymentForm');
-    const confirmationMessage = document.getElementById('confirmationMessage');
-    const btn = document.getElementById('button');
+  // Select DOM elements
+  const paymentForm = document.getElementById('paymentForm');
+  const confirmationMessage = document.getElementById('confirmationMessage');
+  const btn = document.getElementById('button');
 
-    paymentForm.addEventListener('submit', function (event) {
-      event.preventDefault();
+  paymentForm.addEventListener('submit', function (event) {
+    event.preventDefault(); // Prevent form from reloading the page
 
-      btn.textContent = 'Sending...';
+    btn.textContent = 'Sending...'; // Update button text
 
-      // Validate inputs
-      const amount = document.getElementById("amount").value;
-      const reference = document.getElementById("reference").value;
-      const location = document.getElementById("location").value;
+    // Static data
+    const momoNumber = "0578837373";
+    const name = "Adorina";
 
-      if (!amount || !reference || !location || amount <= 0) {
-        alert("Please fill in all required fields correctly.");
-        btn.textContent = 'Confirm Payment';
-        return;
-      }
+    // Retrieve input values
+    const amount = document.getElementById("amount").value;
+    const reference = document.getElementById("reference").value;
+    const location = document.getElementById("location").value;
 
-      const formData = { amount, reference, location };
+    // Validate inputs
+    if (!amount || !reference || !location) {
+      alert("Please fill in all required fields.");
+      btn.textContent = 'Confirm Payment';
+      return;
+    }
 
-      // Send the data using EmailJS
-      const serviceID = 'default_service';
-      const templateID = 'template_8o08ytp';
+    if (amount <= 0) {
+      alert("Amount must be greater than 0.");
+      btn.textContent = 'Confirm Payment';
+      return;
+    }
 
-      emailjs.send(serviceID, templateID, formData)
-        .then(() => {
-          btn.textContent = 'Confirm Payment';
-          confirmationMessage.style.display = 'block';
-          confirmationMessage.textContent = `Thank you, Adorina! Your payment of GH₵‎${amount} has been processed. Delivery to ${location} is confirmed. Reference: ${reference}.`;
-          paymentForm.reset();
-          setTimeout(() => {
-            window.location.href = "./index.html"; // Redirect to home page
-          }, 3000); // 3-second delay
-        })
-        .catch((err) => {
-          btn.textContent = 'Confirm Payment';
-          confirmationMessage.style.display = 'block';
-          confirmationMessage.textContent = "Error submitting your order. Please try again.";
-        });
-    });
-  </script>
+    // Prepare data for sending
+    const formData = {
+      momoNumber: momoNumber,
+      name: name,
+      amount: amount,
+      reference: reference,
+      location: location,
+    };
+
+    // Send data using EmailJS
+    const serviceID = 'default_service'; // Replace with your EmailJS service ID
+    const templateID = 'template_8o08ytp'; // Replace with your EmailJS template ID
+
+    emailjs.send(serviceID, templateID, formData)
+      .then(() => {
+        btn.textContent = 'Confirm Payment'; // Reset button text
+        confirmationMessage.style.display = 'block';
+        confirmationMessage.textContent = `Thank you, Your payment of GH₵‎${amount} has been processed. Delivery to ${location} is confirmed. Reference: ${reference}.`;
+        paymentForm.reset(); // Clear form fields
+
+        // Reset static fields after clearing the form
+        document.getElementById("momoNumber").value = momoNumber;
+        document.getElementById("name").value = name;
+
+        // Redirect to home page after 3 seconds
+        setTimeout(() => {
+          window.location.href = "./index.html";
+        }, 3000);
+      })
+      .catch((err) => {
+        console.error('Error:', err);
+        btn.textContent = 'Confirm Payment'; // Reset button text
+        confirmationMessage.style.display = 'block';
+        confirmationMessage.textContent = "Error submitting your order. Please try again later.";
+      });
+  });
+</script>
+
 </body>
 </html>
